--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
       <div class="c5">
          <div class="type5">Get to know me more :)<br><div id="arrow">↓</div></div> 
       </div>
+      <div class="c6">
+         <a href="https://www.linkedin.com/in/harshitha-durai" target="_blank" class="contact-icons"><i class="devicon-linkedin-plain"></i></a>
+      </div>
+      <div class="c7">
+         <a href="https://github.com/harshithadurai" target="_blank" class="contact-icons"><i class="devicon-github-original"></i></a>
+      </div>
       <!--svg start-->
       <svg
       xmlns:dc="http://purl.org/dc/elements/1.1/"
