--- a/index.html
+++ b/index.html
@@ -765,7 +765,7 @@
             Hey there! I’m a third-year <a href="https://uwaterloo.ca/future-students/programs/computer-science" target="_blank">Computer Science</a> Co-op student at the <a href="https://uwaterloo.ca/" target="_blank">University of Waterloo</a>.
             I’m interested in developing software to solve real-world problems
             and have a knack for coming up with creative, yet practical solutions. 
-            Also, I love a good aesthetic with clean design and documentation, and try to incorporate into in all of my projects. 
+            Also, I love a good aesthetic with clean design and documentation, and try to incorporate it into all of my projects. 
             <br> <br>
             I'm always on the run to learn new technologies and keep myself updated in the tech world. 
             In my free time I'm usually hanging out with friends, binge-watching shows, or thinking about the simulation we're in. 
