--- a/index.html
+++ b/index.html
@@ -768,7 +768,7 @@
             Also, I love a good aesthetic with clean design and documentation, and try to incorporate it into all of my projects. 
             <br> <br>
             I'm always on the run to learn new technologies and keep myself updated in the tech world. 
-            In my free time I'm usually hanging out with friends, binge-watching shows, or thinking about the simulation we're in. 
+            In my free time, I'm usually hanging out with friends, binge-watching shows, or thinking about the simulation we're in. 
             I also enjoy playing Chess and Table Tennis.
             <br>
          </div>
